[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/TinySwordsPack/HappySheep_Bouncing.png" type="Texture" id=1]
[ext_resource path="res://Assets/TinySwordsPack/grass.png" type="Texture" id=2]
[ext_resource path="res://SoundMagic/MicrophoneInput.tscn" type="PackedScene" id=3]
[ext_resource path="res://Minigames/SongLevel/SongMinigame.gd" type="Script" id=4]
[ext_resource path="res://Minigames/SongLevel/SheepPlayer.gd" type="Script" id=5]
[ext_resource path="res://UIElements/DeviceSelection.tscn" type="PackedScene" id=6]

[sub_resource type="GDScript" id=8]
script/source = "extends Sprite

var speed = 160

func _process(delta):
	var rect = self.region_rect
	self.region_rect = Rect2(rect.position.x, 
							rect.position.y - delta * speed * 1.4 , 
							rect.size.x, 
							rect.size.y)
"

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=9]
script/source = "extends AnimatedSprite

func _ready():
	self.playing = true
"

[sub_resource type="CircleShape2D" id=10]
radius = 17.0294

[node name="SongMinigame" type="Node2D"]
script = ExtResource( 4 )

[node name="MicrophoneInput" parent="." instance=ExtResource( 3 )]
processing_mode = 0
QUIET_TOLERANCE = 3
THROW_AWAY_QUIET_NOTES = true

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 513, 298 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1200, 800 )
script = SubResource( 8 )

[node name="SheepPlayer" type="Node2D" parent="."]
position = Vector2( 523, 548 )
script = ExtResource( 5 )

[node name="Sheep" type="AnimatedSprite" parent="SheepPlayer"]
frames = SubResource( 7 )
speed_scale = 2.0
script = SubResource( 9 )

[node name="RigidBody2D" type="RigidBody2D" parent="SheepPlayer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SheepPlayer/RigidBody2D"]
shape = SubResource( 10 )

[node name="LeftBound" type="Position2D" parent="."]
position = Vector2( 36, 561 )

[node name="RightBound" type="Position2D" parent="."]
position = Vector2( 985, 564 )

[node name="DeviceSelection" parent="." instance=ExtResource( 6 )]
margin_left = 32.0
margin_top = 37.0
margin_right = 282.0
margin_bottom = 78.0
